public static class GameConstants
{
    public const string HIGHSCORE_KEY = "HighScore";
    public const string HIGHSCORE_TEXT = "High Score ";
    public const string MAINMENU_TEXT = "MainMenu";
    public const string MAINMENU_LEVEL_NAME = "MainMenu";
    public const string MAXACT_KEY = "MaxAct";
    public const string MUSICVOLUME_KEY = "MusicVolume";
    public const string GROUNDMASK_KEY = "Ground";
    public const string ENEMYLIMITS_KEY = "EnemyLimits";
    public const string PLAYERTAG_KEY = "Player";
    public const string TRIGGERJUMP_KEY = "jump";
    public const string TRIGGERHIT_KEY = "Hit";
    public const string FLOATVELOCITY_KEY = "yVelocity";
    public const string FLOATSPEED_KEY = "Speed";
    public const string ENEMYDEADBOOL_KEY = "enemyDead";
    public const string SKIDDINGBOOL_KEY = "IsSkidding";
    public const string SPININGBOOL_KEY = "IsSpining";
    public const string JUMPINGBOOL_KEY = "IsJumping";

    public const string BOSSNAME_KEY = "TikiTaka";
    public const string BUTTONCONTAINER_KEY = "ButtonContainer";
    public const string ACT_KEY = "Act";
}